Fix multipliers zero not showing on front end

--- a/client/src/Styles/admin.css
+++ b/client/src/Styles/admin.css
@@ -188,3 +188,8 @@
 .admin-popup-info h2 {
     margin: 0;
 }
+
+.admin-multiplier-span
+{
+    margin-left: 5px;
+}
